Fix layout bugs

--- a/views/styles/global.css
+++ b/views/styles/global.css
@@ -56,7 +56,7 @@ textarea {
 }
 
 nav {
-  z-index: 1;
+  z-index: 10;
   position: fixed;
   top: 0;
   left: 0;
